--- a/scss/_event-grid.scss
+++ b/scss/_event-grid.scss
@@ -4,7 +4,6 @@
     width: 90%;
     
     .event-window{
-    	overflow: hidden;
         opacity: 0.9;
         &:hover { opacity: 1.0; }
         background-color: white;
